(PLTB-1393) removed now-unnecessary `--add-modules`